# iot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  sdkconfig  temp.json
main/: CMakeLists.txt  configLex.l  configParser.y  main.c
main/include/: config.h  configServer.h  connection.h  htmlPage.h  mqttHandler.h  power.h  sensors.h  utils.h  wifiController.h
main/include/HAconfig/: HAconfig.h  HApayloads.h  HAtopics.h
main/source/: configServer.c  connection.c  mqttHandler.c  power.c  sensors.c  utils.c  wifiController.c
